--- a/proxy_client/hrr36-fec-tyler-widget/package.json
+++ b/proxy_client/hrr36-fec-tyler-widget/package.json
@@ -7,12 +7,16 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "start": "nodemon server/index.js",
+    "start": "node server/index.js",
+    "start-dev": "NODE_ENV=dev PORT=4444 node server/index.js",
     "react-dev": "webpack -d --watch",
     "lint": "node_modules/.bin/eslint \"**/*.js*\"",
-    "db:setup": "node utils/seed.js",
-    "test-dev": "jest --watchAll",
-    "test": "NODE_ENV=testing jest"
+    "db:setup": "NODE_ENV=dev node utils/seed.js",
+    "test": "NODE_ENV=dev jest",
+    "test-docker-dev": "docker-compose -f docker/docker-compose.test.yml up --build --abort-on-container-exit",
+    "production": "docker-compose -f docker/docker-compose.yml up -d",
+    "build": "docker-compose -f docker/docker-compose.yml build",
+    "stop": "docker-compose down"
   },
   "jest": {
     "transform": {
@@ -55,7 +59,6 @@
     "enzyme-adapter-react-16": "^1.9.1",
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor.git",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
