--- a/proxy_client/hrr36-fec1-britt-widget/package.json
+++ b/proxy_client/hrr36-fec1-britt-widget/package.json
@@ -37,19 +37,20 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
-    "chai-enzyme": "^1.0.0-beta.1",
-    "enzyme": "^3.9.0",
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor.git",
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.5",
+    "chai-enzyme": "^1.0.0-beta.1",
+    "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.9.1",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor.git",
     "express": "^4.16.4",
     "faker": "^4.1.0",
     "imdb-api": "^4.0.2",
     "jest": "^24.1.0",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
+    "nodemon": "^1.18.10",
     "path": "^0.12.7",
     "sinon": "^7.2.3",
     "supertest": "^3.4.2",
