--- a/proxy_client/hrr36-fec1-britt-widget/package.json
+++ b/proxy_client/hrr36-fec1-britt-widget/package.json
@@ -17,7 +17,6 @@
   },
   "dependencies": {
     "body-parser": "^1.17.0",
-    "cors": "^2.8.5",
     "eslint-config-airbnb-base": "^13.1.0",
     "jquery": "^3.1.1",
     "mongoose": "^4.13.18",
@@ -40,6 +39,7 @@
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.5",
     "chai-enzyme": "^1.0.0-beta.1",
+    "css-loader": "^2.1.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.9.1",
     "eslint-config-airbnb": "^17.1.0",
@@ -50,11 +50,13 @@
     "jest": "^24.1.0",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.10",
+    "node-sass": "^4.11.0",
     "path": "^0.12.7",
+    "sass-loader": "^7.1.0",
     "sinon": "^7.2.3",
+    "style-loader": "^0.23.1",
     "supertest": "^3.4.2",
-    "webpack": "^4.29.2",
+    "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3"
   },
   "version": "1.0.0",
