--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Proxy Server for our Front End Capstone Project",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server/index.js",
+    "start": "node server/index.js",
     "react-dev": "webpack -d --watch",
     "lint": "node_modules/.bin/eslint \"**/*.js*\"",
     "test": "NODE_ENV=testing jest --forceExit"
