--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel": "^6.23.0",
     "babel-eslint": "^10.0.1",
     "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "jest": "^24.1.0",
